// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditFilterListToolbar renders the toolbar with no items selected 1`] = `
<Fragment>
  <EuiFlexGroup
    alignItems="center"
    gutterSize="xl"
  >
    <EuiFlexItem>
      <EuiSearchBar
        filters={Array []}
        onChange={[MockFunction]}
        toolsRight={
          Array [
            <AddItemPopover
              addItems={[MockFunction]}
              canCreateFilter={true}
            />,
            <EuiButton
              color="danger"
              data-test-subj="mlFilterListDeleteItemButton"
              disabled={true}
              onClick={[MockFunction]}
              size="s"
            >
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Delete item"
                id="xpack.ml.settings.filterLists.toolbar.deleteItemButtonLabel"
              />
            </EuiButton>,
          ]
        }
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</Fragment>
`;

exports[`EditFilterListToolbar renders the toolbar with one item selected 1`] = `
<Fragment>
  <EuiFlexGroup
    alignItems="center"
    gutterSize="xl"
  >
    <EuiFlexItem>
      <EuiSearchBar
        filters={Array []}
        onChange={[MockFunction]}
        toolsRight={
          Array [
            <AddItemPopover
              addItems={[MockFunction]}
              canCreateFilter={true}
            />,
            <EuiButton
              color="danger"
              data-test-subj="mlFilterListDeleteItemButton"
              disabled={false}
              onClick={[MockFunction]}
              size="s"
            >
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Delete item"
                id="xpack.ml.settings.filterLists.toolbar.deleteItemButtonLabel"
              />
            </EuiButton>,
          ]
        }
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</Fragment>
`;
